# meddl

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  .valgrindrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  todo.txt
.github/workflows/: ci.yml  run_test.sh
examples/: CMakeLists.txt  main.cpp
examples/bouncing_ball/: ball.cpp  gltf_loader.h
examples/spaceship/: spaceship.cpp
include/app/: window.h
include/core/: asserts.h  async.h  engine.h  error.h  formatter_utils.h  log.h  logger.h  window.h  window_old.h  wrappers.h
include/engine/: gpu_types.h  loader.h  renderer.h  shader.h  types.h  vertex.h  window.h
include/engine/events/: event.h  keycodes.h
include/engine/events/glfw/: event_handler.h
include/engine/platform/: platform.h  platform_traits.h  window_handle.h
include/engine/render/: surface.h
include/engine/render/vk/: async.h  buffer.h  command.h  config.h  debug.h  defaults.h  descriptor.h  device.h  error.h  hash.hpp  image.h  instance.h  physical_device.h  pipeline.h  queue.h  renderpass.h  sampler.h  shader.h  shared.h  surface.h  swapchain.h  texture.h  utils.h  vk.h
include/vk/: async.h  command.h  context.h  debug.h  defaults.h  descriptor.h  device.h  error.h  hash.hpp  image.h  instance.h  pipeline.h  queue.h  renderer.h  renderpass.h  shader.h  surface.h  swapchain.h  vertex.h  vk.h
include/vulkan_renderer/: context.h  device.h  swapchain.h  vulkan_debug.h
include/wrappers/glfw/: glfw_wrapper.h  window.h
include/wrappers/vulkan/: surface_khr.h  vulkan_wrapper.h
src/: engine.cpp  main.cpp  window.cpp
src/core/: async.cpp  error.cpp  log.cpp  logger.cpp
src/engine/: loader.cpp  renderer.cpp  shader.cpp
src/engine/render/vk/: async.cpp  buffer.cpp  command.cpp  config.cpp  debug.cpp  descriptor.cpp  device.cpp  image.cpp  instance.cpp  physical_device.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  sampler.cpp  shader.cpp  surface.cpp  swapchain.cpp  texture.cpp
src/vk/: async.cpp  buffer.cpp  command.cpp  context.cpp  debug.cpp  descriptor.cpp  device.cpp  instance.cpp  pipeline.cpp  queue.cpp  renderer.cpp  renderpass.cpp  shader.cpp  surface.cpp  swapchain.cpp  vertex.cpp
src/vulkan_renderer/: context.cpp  device.cpp  swapchain.cpp  vulkan_debug.cpp
tests/: CMakeLists.txt  first_test.cpp  main.cpp
tests/core/: async_tests.cpp  main.cpp
tests/vk/: main.cpp  vk_tests.cpp
